Hotfix: criaturas marinas arregladas y cambiado routing

--- a/project/myCrossing/src/app/inicio/inicio.component.html
+++ b/project/myCrossing/src/app/inicio/inicio.component.html
@@ -26,7 +26,7 @@
       </ng-container>
       <button id="peces" routerLink="/catalogo-peces" (mouseover)="imagen = 1">Peces</button>
       <button id="bichos" routerLink="/catalogo-insectos" (mouseover)="imagen = 2">Bichos</button>
-      <button id="criaturas-marinas" (mouseover)="imagen = 3">Criaturas marinas</button>
+      <button id="criaturas-marinas" routerLink="/catalogo-criaturas-marinas" (mouseover)="imagen = 3">Criaturas marinas</button>
     </div>
   </div>
   <hr id="hr-azul">
