--- a/project/myCrossing/src/app/perfil/misvecinos/vecino-menu/vecino-menu.component.html
+++ b/project/myCrossing/src/app/perfil/misvecinos/vecino-menu/vecino-menu.component.html
@@ -1,3 +1,4 @@
+<!-- Menu vecino-->
 <div style="width: 42vw; height: 25vw; display: none;" class="popup-menu flex-column" (busquedaEmitter)="filtrar($event)" #menuVecino>
   <div class="flex-centered">
     <input [formControl]="busqueda" type="text" placeholder="Buscar" style="width: 70%;">
@@ -6,11 +7,11 @@
     <div class="lista">
       <ng-container *ngFor="let vecino of vecinosArray | filtroVecino:valorFiltrar">
         <div class="elementList">
-          <label>
+          <label class="flex-column-centered" style="margin: 0.5vw 0">
             <input formControlName="id" type="radio" value="{{vecino.uniqueEntryId}}" class="radio-hidden">
             <img [src]="vecino.iconImage" [class]="vecinoForm.value['id'] == vecino.uniqueEntryId ? 'img-radio img-radio-checked' : 'img-radio'">
+            <span>{{vecino.translations.spanish}}</span>
           </label>
-          <label>{{vecino.translations.spanish}}</label>
         </div>
       </ng-container>
     </div>
@@ -21,21 +22,33 @@
   </form>
 </div>
 
-<div class="popup-menu" style="width: 15vw; display: none;" #menuAmistad>
-  <form [formGroup]="amistadForm" (ngSubmit)="enviar(amistadForm.value, true)">
-    <label for="rad1">1</label>
-    <input formControlName="amistad" id="rad1" type="radio" value="1">
-    <label for="rad1">2</label>
-    <input formControlName="amistad" id="rad2" type="radio" value="2">
-    <label for="rad1">3</label>
-    <input formControlName="amistad" id="rad3" type="radio" value="3">
-    <label for="rad1">4</label>
-    <input formControlName="amistad" id="rad4" type="radio" value="4">
-    <label for="rad1">5</label>
-    <input formControlName="amistad" id="rad5" type="radio" value="5">
-    <label for="rad1">6</label>
-    <input formControlName="amistad" id="rad6" type="radio" value="6">
-    <hr class="menu-hr">
-    <button [disabled]="amistadForm.invalid" type="submit">Listo</button>
+<!-- Menu amistad-->
+<div class="popup-menu" style="width: 22vw; display: none;" #menuAmistad>
+  <form [formGroup]="amistadForm" class="flex-centered" style="justify-content: space-around;" (ngSubmit)="enviar(amistadForm.value, true)">
+    <label>
+      <input formControlName="amistad" class="radio-hidden" id="rad1" type="radio" value="1">
+      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">1</button>
+    </label>
+    <label>
+      <input formControlName="amistad" class="radio-hidden" id="rad2" type="radio" value="2">
+      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">2</button>
+    </label>
+    <label>
+      <input formControlName="amistad" class="radio-hidden" id="rad3" type="radio" value="3">
+      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">3</button>
+    </label>
+    <label>
+      <input formControlName="amistad" class="radio-hidden" id="rad4" type="radio" value="4">
+      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">4</button>
+    </label>
+    <label>
+      <input formControlName="amistad" class="radio-hidden" id="rad5" type="radio" value="5">
+      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">5</button>
+    </label>
+    <label>
+      <input formControlName="amistad" class="radio-hidden" id="rad6" type="radio" value="6">
+      <button class="boton-imagen amistad" style="color:#F7F3E8;font-size: 1.2vw;">6</button>
+    </label>
+    <button [disabled]="amistadForm.invalid" class="boton-imagen save" style="width: 1.5vw;height: 1.5vw;" type="submit"></button>
   </form>
 </div>
