--- a/project/myCrossing/src/app/autenticacion/registro/registro.component.html
+++ b/project/myCrossing/src/app/autenticacion/registro/registro.component.html
@@ -8,7 +8,7 @@
                         <label for="nombre">Nombre: </label>
                     </div>
                     <div class="fieldinput">
-                        <input id="nombre" formControlName='nombre' type="text">
+                        <input id="nombre" class="text-input" formControlName='nombre' type="text">
                     </div>
                 </div>
                 <ng-container  *ngIf="registerForm.controls.nombre.errors && submitted">
@@ -23,7 +23,7 @@
                         <label for="password">Contraseña: </label>
                     </div>
                     <div class="fieldinput">
-                        <input id="password" formControlName='clave' type="password">
+                        <input id="password" class="text-input" formControlName='clave' type="password">
                     </div>
                 </div>
                 <ng-container *ngIf="registerForm.controls.clave.errors && submitted">
@@ -38,7 +38,7 @@
                         <label for="isla">Isla: </label>
                     </div>
                     <div class="fieldinput">
-                        <input id="isla" formControlName='isla' type="text">
+                        <input id="isla" class="text-input" formControlName='isla' type="text">
                     </div>
                 </div>
                 <ng-container  *ngIf="registerForm.controls.isla.errors && submitted">
@@ -53,25 +53,35 @@
                         <label for="fruta">Fruta: </label>
                     </div>
                     <div class="radioinputs">
-                        <input type="radio" id="pera" formControlName='fruta' value="PERA">
+                        <label>
+                          <input type="radio" class="radio-hidden" id="pera" formControlName='fruta' value="PERA">
+                          <img alt="Pera" [class]="registerForm.value['fruta'] == 'PERA' ? 'img-radio img-radio-checked' : 'img-radio'" width="8%" height="8%" src="../../../assets/images/pera.png">
+                        </label>
                     </div>
-                        <img alt="Pera" width="8%" height="8%" src="../../../assets/images/pera.png">
                     <div class="radioinputs">
-                        <input type="radio" id="manzana" formControlName='fruta' value="MANZANA">
+                      <label>
+                        <input type="radio" class="radio-hidden" id="manzana" formControlName='fruta' value="MANZANA">
+                        <img alt="Manzana" [class]="registerForm.value['fruta'] == 'MANZANA' ? 'img-radio img-radio-checked' : 'img-radio'" width="8%" height="8%" src="../../../assets/images/manzana.png">
+                      </label>
                     </div>
-                        <img alt="Manzana" width="8%" height="8%" src="../../../assets/images/manzana.png">
                     <div class="radioinputs">
-                        <input type="radio" id="naranja" formControlName='fruta' value="NARANJA">
+                      <label>
+                        <input type="radio" class="radio-hidden" id="naranja" formControlName='fruta' value="NARANJA">
+                        <img alt="Naranja" [class]="registerForm.value['fruta'] == 'NARANJA' ? 'img-radio img-radio-checked' : 'img-radio'" width="8%" height="8%" src="../../../assets/images/naranja.png">
+                      </label>
                     </div>
-                        <img alt="Naranja" width="8%" height="8%" src="../../../assets/images/naranja.png">
                     <div class="radioinputs">
-                        <input type="radio" id="cereza" formControlName='fruta' value="CEREZA">
+                      <label>
+                        <input type="radio" class="radio-hidden" id="cereza" formControlName='fruta' value="CEREZA">
+                        <img alt="Cereza" [class]="registerForm.value['fruta'] == 'CEREZA' ? 'img-radio img-radio-checked' : 'img-radio'" width="8%" height="8%" src="../../../assets/images/cereza.png">
+                      </label>
                     </div>
-                        <img alt="Cereza" width="8%" height="8%" src="../../../assets/images/cereza.png">
                     <div class="radioinputs">
-                        <input type="radio" id="melocoton" formControlName='fruta' value="MELOCOTON">
+                      <label>
+                        <input type="radio" class="radio-hidden" id="melocoton" formControlName='fruta' value="MELOCOTON">
+                        <img alt="Melocoton" [class]="registerForm.value['fruta'] == 'MELOCOTON' ? 'img-radio img-radio-checked' : 'img-radio'" width="8%" height="8%" src="../../../assets/images/melocoton.png">
+                      </label>
                     </div>
-                        <img alt="Melocoton" width="8%" height="8%" src="../../../assets/images/melocoton.png">
                 </div>
                 <ng-container  *ngIf="registerForm.controls.fruta.errors && submitted">
                     <div class="error">
@@ -85,7 +95,7 @@
                         <label for="cumpleanyos">Cumpleanyos: </label>
                     </div>
                     <div class="fieldinput">
-                        <input id="cumpleanyos" formControlName='cumpleanyos' type="date">
+                        <input id="cumpleanyos" class="text-input" formControlName='cumpleanyos' type="date">
                     </div>
                 </div>
                 <ng-container  *ngIf="registerForm.controls.cumpleanyos.errors && submitted">
@@ -100,7 +110,7 @@
                         <label for="email">Email: </label>
                     </div>
                     <div class="fieldinput">
-                        <input type="email" id="email" formControlName='email'>
+                        <input type="email" class="text-input" id="email" formControlName='email'>
                     </div>
                 </div>
                 <ng-container  *ngIf="registerForm.controls.email.errors && submitted">
@@ -113,13 +123,17 @@
                         <label for="hemisferio">Hemisferio: </label>
                     </div>
                     <div class="radioinputs">
-                    <input type="radio" id="norte" formControlName='hemisferio' value="NORTE">
+                      <label>
+                        <input type="radio" class="radio-hidden" id="norte" formControlName='hemisferio' value="NORTE">
+                        <img alt="Norte" [class]="registerForm.value['hemisferio'] == 'NORTE' ? 'img-radio img-radio-checked' : 'img-radio'" width="6%" height="6%" src="../../../assets/images/hemisferio-norte.png">
+                      </label>
                     </div>
-                    <img alt="Norte" width="6%" height="6%" src="../../../assets/images/hemisferio-norte.png">
                     <div class="radioinputs">
-                    <input type="radio" id="sur" formControlName='hemisferio' value="SUR">
+                      <label>
+                        <input type="radio" class="radio-hidden" id="sur" formControlName='hemisferio' value="SUR">
+                        <img alt="Sur" [class]="registerForm.value['hemisferio'] == 'SUR' ? 'img-radio img-radio-checked' : 'img-radio'" width="6%" height="6%" src="../../../assets/images/hemisferio-sur.png">
+                      </label>
                     </div>
-                    <img alt="Sur" width="6%" height="6%" src="../../../assets/images/hemisferio-sur.png">
                 </div>
                 <ng-container  *ngIf="registerForm.controls.hemisferio.errors && submitted">
                     <div class="error">
@@ -133,7 +147,7 @@
                         <label for="id_switch">Id switch: </label>
                     </div>
                     <div class="fieldinput">
-                        <input type="text" placeholder="SW-1234-1234-1234" maxlength="17" minlength="17" id="id_switch" formControlName='id_switch'>
+                        <input type="text" class="text-input" placeholder="SW-1234-1234-1234" maxlength="17" minlength="17" id="id_switch" formControlName='id_switch'>
                     </div>
                 </div>
                 <div>
@@ -148,7 +162,7 @@
                         <label for="id_suenyo">Id sueño: </label>
                     </div>
                     <div class="fieldinput">
-                        <input type="text" placeholder="DA-1234-1234-1234" maxlength="17" minlength="17"  id="id_suenyo" formControlName='id_suenyo'>
+                        <input type="text" class="text-input" placeholder="DA-1234-1234-1234" maxlength="17" minlength="17"  id="id_suenyo" formControlName='id_suenyo'>
                     </div>
                 </div>
                 <div>
@@ -163,11 +177,11 @@
                         <label for="apodo_aldeano">Apodo aldeano: </label>
                     </div>
                     <div class="fieldinput">
-                        <input type="text" id="apodo_aldeano" formControlName='apodo_aldeano'>
+                        <input type="text" class="text-input" id="apodo_aldeano" formControlName='apodo_aldeano'>
                     </div>
                 </div>
                 <div class="registrar">
-                    <button type="submit">Registrate</button>
+                    <button type="submit" class="boton-alargado b-verde" >Registrate</button>
                 </div>
                 <div class="aviso">{{aviso}}</div>
             </form>
