--- a/project/myCrossing/src/app/cat-fosil/cat-fosil.component.html
+++ b/project/myCrossing/src/app/cat-fosil/cat-fosil.component.html
@@ -7,7 +7,7 @@
           <button (click)="activaFiltro('obtenido')" [class]="this.botonFiltrar == 'obtenido' ? 'boton-alargado b-verde' : 'boton-alargado b-azul'" style="margin:0.5vw">Obtenidos</button>
           <button (click)="activaFiltro('falta')" [class]="this.botonFiltrar == 'falta' ? 'boton-alargado b-verde' : 'boton-alargado b-azul'" style="margin:0.5vw">Me faltan</button>
         </div>
-        <input [formControl]="busqueda" type="text" placeholder="Buscar" [style.width]="this._verif.user == null ? '50%' : '30%'">
+        <input [formControl]="busqueda" class="text-input" type="text" placeholder="Buscar" [style.width]="this._verif.user == null ? '50%' : '30%'">
       </div>
     </div>
   </div>
