--- a/project/myCrossing/src/styles.css
+++ b/project/myCrossing/src/styles.css
@@ -217,7 +217,7 @@ label{
 }
 
 .div-error{
-  position: absolute;
+  position: fixed;
   background-color: rgb(252, 137, 137);
   width: 30%;
   align-self: center;
@@ -225,6 +225,13 @@ label{
   z-index: 10;
   padding: 1vw 2.5vw;
   border-radius: 20px;
+}
+
+.text-input{
+  border-radius: 20px;
+  border-style: none;
+  padding: 0.5vw 1vw;
+  box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 20%);
 }
 
 
