Falta comunicar filtro tiempo

--- a/project/myCrossing/src/app/navbar/navbar.component.css
+++ b/project/myCrossing/src/app/navbar/navbar.component.css
@@ -67,6 +67,10 @@ img {
   background-color: rgb(174, 253, 180);
 }
 
+.activado{
+  background-color: rgb(174, 253, 180);
+}
+
 .login{
   margin: 0 0 0 6vw;
 }
