--- a/project/myCrossing/src/app/navbar/navbar.component.html
+++ b/project/myCrossing/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <img routerLink="" src="../../assets/images/logo.png"/>
 
   <div id="menu">
-    <button class="button-nav" routerLink="/caza-ahora" routerLinkActive="activo">Cazar ahora</button>
+    <button [class]="_comunicacion.activar ? 'activado':''" class="button-nav" routerLink="/cat-caza-insectos" routerLinkActive="activo">Cazar ahora</button>
     <button class="button-nav" routerLink="/disenyos" routerLinkActive="activo">Diseños</button>
     <button class="button-nav" routerLink="/probador" routerLinkActive="activo">Probador</button>
     <button class="button-nav" routerLink="/nabos" routerLinkActive="activo">Nabos</button>
